Thu Jun  6 09:32:24 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/catman.c (add_arg): MYDBM_DSIZE may return size_t; cast (for
	  the cases where it returns int instead) and format using %zu
	  rather than %d.

Thu Jun  6 09:01:46 BST 2013  Trần Ngọc Quân  <vnwildman@gmail.com>

	* po/vi.po: Update from Translation Project.

Thu Jun  6 02:51:15 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/tests/testlib.sh: Export LC_ALL and MANPATH, for the benefit
	  of shells that do not automatically re-export variables they
	  receive in their environment.

Thu Jun  6 02:50:25 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/descriptions_store.c (store_description): Format size_t using
	  %zu, not %d.

Thu Jun  6 02:40:10 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/tests/manconv-2, src/tests/manconv-3: Use octal escapes rather
	  than hexadecimal escapes; the latter are not portable to all
	  printf(1) implementations.

Thu Jun  6 01:49:32 BST 2013  Colin Watson  <cjwatson@debian.org>

	* man/Rules.man (TESTS_ENVIRONMENT): Quote variable assignments.

Thu Jun  6 01:43:29 BST 2013  Colin Watson  <cjwatson@debian.org>

	* man/Rules.man (TESTS_ENVIRONMENT): Move environment variable
	  settings here, rather than using non-portable 'export'.

Thu Jun  6 01:39:29 BST 2013  Colin Watson  <cjwatson@debian.org>

	* docs/INSTALL.quick: Reformat external package requirements as a
	  bullet list.  Add flex >= 2.5.30.

Thu Jun  6 01:32:19 BST 2013  Colin Watson  <cjwatson@debian.org>

	* tools/config.guess: Update to 2013-05-16.
	* tools/config.sub: Update to 2013-04-24.

Tue Jun  4 09:38:08 BST 2013  David Prévot  <david@tilapin.org>

	* man/po4a/po/fr.po: Update from Translation Project.

Mon Jun  3 22:59:03 BST 2013  Yuri Kozlov  <yuray@komyakino.ru>

	* man/po4a/po/ru.po: Update from Translation Project.

Mon Jun  3 13:06:43 BST 2013  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.4-pre1.
